# Kongbserg-sensor

./: CMakeLists.txt  README.md
config/: receiverConfig.json  sensorConfig.json
include/: Client.hpp  DeviceManager.hpp  Receiver.hpp  ReceiverManager.hpp  Sensor.hpp  SensorManager.hpp  Server.hpp
src/client/: main.cpp
src/client/components/: Client.cpp  ReceiverManager.cpp
src/server/: main.cpp
src/server/components/: Sensor.cpp  SensorManager.cpp  Server.cpp
